assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@300&family=Montserrat&display=swap');

body {
    font-family: 'Montserrat', sans-serif;
    background-color: white;
    text-align: left;
    font-weight: 400;
    font-size: 100%;
}

/* Header image */

#header-image {
    background-image: url(../images/hebrew-writing-manuscript.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    background-attachment: fixed;
    width: 100%;
    margin: 0;
    max-height: 90%;
    min-height: 450px;
}

/* Headings */

h1 {
    font-family: 'Arima Madurai', cursive;
    font-size: 300%;
    text-align: center;
    margin: 100px 100px;
    letter-spacing: 3px;
    color: #0339A6;
}

h2,
h3 {
    font-weight: 600;
    color: #D95252;
    letter-spacing: 3px;
    font-family: 'Arima Madurai', cursive;
    text-align: left;
}

/* header navigation links */

#menu {
    font-size: 110%;
    font-weight: 600;
    font-family: 'Arima Madurai', cursive;
    color: #0339A6;
    background-color: white;
}

#menu ul {
    display: table;
    list-style-type: none;
    text-align: center;
    margin: 0 auto;
    padding: 0;
    display: block;
}

#menu li {
    list-style-type: none;
    letter-spacing: 4px;
    padding-top: 50px;
    font-size: 110%;
    display: inline-block;
    margin-right: 50px;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a.active {
    color: #F2B84B;
    border-bottom: 2px solid #A3AA89;
}

#menu a:hover {
    color: #A3AA89;
}

/* All links */

a:link {
    color: blue;
}

a:visited {
    color: #0339A6;
}

a:hover {
    color: #A3AA89;
}

/* Home page */

.main-container {
    font-family: 'Montserrat', sans-serif;
    background-color: white;
    text-align: justify;
    margin: 50px auto;
    border: none;
    max-width: 860px;
    letter-spacing: 1px;
    line-height: 1.50;
    height: 100%;
    color: black;
}

#div-home-image {
    background-color: white;
    border: none;
}

#home-image {
    display: block;
    max-width: 60%;
    margin: 0 auto;
}

#main-points ul {
    list-style-type: none;
}

/* hebrew alphabet page */

#alphabet-introduction {
    width: 70%;
    text-align: left;
    margin-right: 30px;
}

#alphabet-picture {
    width: 70%;
    float: left;
    margin: 40px 40px;
    border-radius: 5px;
}

/* hebrew alphabet table */

#alphabet-table {
    max-width: 100%;
    font-family: 'Montserrat', sans-serif;
    background-color: white;
    font-weight: 400;
    font-size: 110%;
    padding: 30px;
}

table {
    border-collapse: collapse;
}

th,
td {
    text-align: center;
    padding: 20px;
    margin-right: 10px;
    margin-bottom: 20px;
    letter-spacing: 3px;
    margin-right: 10px;
    border: 1px solid #ddd;
}

th {
    color: #0339A6;
    font-weight: 600;
}

td {
    font-weight: 400;
}

tr:nth-child(even) {
    background-color: #F0F8FF;
}

tr:hover {
    background-color: #ADD8E6;
}

/* Vowels image */

#vowels {
    width: 70%;
    padding: 20px 0 20px 0;
    margin: 20px 20px;
    height: 100%;
}

/* Common Hebrew Phrases Page */

#container-words-page {
    font-family: 'Montserrat', sans-serif;
    background-color: white;
    text-align: justify;
    margin: 50px auto;
    border: none;
    max-width: 150%;
    letter-spacing: 2px;
    line-height: 1.50;
    height: 100%;
    max-width: 860px;
    color: black;
}

#words-introduction {
    width: 80%;
    text-align: left;
    float: inherit;
}

#words-picture {
    width: 50%;
    max-width: 100%;
    float: left;
    margin: 0 40px 30px 0;
    border-radius: 5px;
}

.clear {
    clear: left;
}

#second-image {
    width: 60%;
    height: 60%;
    text-align: left;
    float: right;
    border-radius: 5px;
    margin: 0 0 50px 50px;
}

.clearfix {
    overflow: auto;
}

/* Footer */

.main-footer {
    background-color: #F4E2BE;
    font-size: 100%;
    font-weight: 400;
    font-family: 'Arima Madurai', cursive;
    color: #0339A6;
    padding: 40px 0;
    text-align: center;
    margin: 0;
}

.main-footer li {
    list-style-type: none;
    letter-spacing: 4px;
    padding: 10px 10px;
    display: inline-block;
    margin-right: 50px;
}

.main-footer ul {
    display: table;
    list-style-type: none;
    text-align: center;
    margin: 0 auto;
    padding: 0;
    display: block;
}

.main-footer a {
    text-decoration: none;
    color: inherit;
}

.main-footer a:hover {
    color: #401801;
    border-bottom: 2px solid #403521;
}

.copyright {
    text-align: center;
    color: black;
    font-size: 100%;
    font-weight: 600;
    font-family: 'Arima Madurai', cursive;
    margin: 50px 80px 0 0;
}

/* Media queries */

/* For small-medium screen size from 300 and up */

@media screen and (max-width: 300px) {

    h1,
    h2 {
        text-align: center;
        width: 100%;
        font-size: 30px;
    }

    #div-home-image {
        width: 120%;
    }

    #alphabet-picture {
        margin: 10px;
        padding: 10px 10px 0 0;
    }

    #alphabet-table {
        max-width: 450px;
        overflow-x: scroll;
    }
}

@media screen and (max-width: 360px) {
    h1 {
        text-align: center;
        font-size: 35px;
    }

    #second-image {
        float: none;
        margin: 20px 20px;
        width: 80%
    }

    #words-picture {
        width: 100%;
        float: none;
        margin: 0 40px 30px 30px;
    }
}

@media screen and (max-width: 535px) {
    h1 {
        margin: 65px 100px 50px 100px;
    }

    #menu a.active {
        border: none;
    }

    #menu ul {
        margin-left: 30px;

    }

    #alphabet-table {
        max-width: 450px;
        overflow-x: scroll;
    }
}

@media screen and (max-width: 470px) {

    #home-image {
        max-width: 70%;
    }

    #alphabet-picture {
        width: 120%;
    }

    h1 {
        text-align: center;
        font-size: 35px;
        margin: 70px 70px;
    }

    h1,
    h2 {
        text-align: center;
    }
}

@media screen and (max-width: 720px) {
    #alphabet-table {
        max-width: 450px;
        overflow-x: scroll;
    }

    h1 {
        text-align: center;
        font-size: 35px;
    }
}

@media screen and (max-width: 800px) {

    #header-image {
        background-image: url(../images/hebrew-writing-manuscript.jpg);
        background-size: cover;
        background-repeat: no-repeat;
        background-position: center center;
        background-attachment: fixed;
        width: 100%;
        margin: 0;
        max-height: 70%;
        min-height: 300px;
    }

}

@media screen and (max-width: 900px) {

    .main-container,
    #container-words-page {
        max-width: 100%;
        margin: 10px;
        padding: 20px;
    }

    h1 {
        text-align: center;
    }
}

